# template-rust-service

./: .env.example  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: user.rs
migration/src/: lib.rs  m20240714_144544_create_users_table.rs
src/: main.rs
src/database/: mod.rs
src/routers/: mod.rs
src/routers/v1/: mod.rs  users.rs
